# veryrezsi

./: DEV.md  LICENSE  README.md  docker-compose.yml  postman_collection.json  setup.sh
.github/workflows/: database.yml  deploy-dev.yml  images.yml  rust.yml  svelte.yml
.github/workflows/lightsail/: deployment-containers.json  deployment-endpoint.json
.prometheus/: prometheus.yml
client/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .prettierrc  Dockerfile  README.md  dev-setup.sh  jest.config.cjs  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
client/__tests__/mock/api/user/: login.test.ts
client/mock/: README.md
client/mock/api/_common/: axios_response.ts
client/mock/api/models/: login_model.ts  me_model.ts  register_model.ts
client/mock/api/user/: login.ts  me.ts  register.ts
client/mock/entities/: currency_type.json  predefined_expense.json  predefined_expenses.json  transaction.json  user.json  user_expense.json  users.json
client/src/: app.css  app.d.ts  app.html  hooks.server.ts  hooks.ts  stores.ts
client/src/__tests__/: login.test.ts  profile.test.ts
client/src/api/: expenses.ts  user.ts
client/src/lib/: RegistrationForm.svelte  Welcomponent.svelte  auth.ts  const.ts
client/src/lib/components/: NewExpenseDialog.svelte  NewTransactionDialog.svelte  TransactionItem.svelte  TransactionList.svelte  UserDetails.svelte
client/src/lib/components/common/: AlertMsg.svelte  ThemedValidationHint.svelte
client/src/lib/components/getting-started/: LoginForm.svelte  RegistrationForm.svelte
client/src/lib/components/layout-base/: Footer.svelte  Header.svelte  NavEntry.svelte
client/src/lib/server/: backend.config.ts  server.config.ts
client/src/lib/shared/: constants.ts  cookie.ts  domain.ts  proxy.ts
client/src/lib/shared/api/: login.ts  me.ts  register.ts
client/src/lib/shared/composables/: createFormState.ts
client/src/mock/: README.md
client/src/mock/api/_common/: axios_response.ts  response_body.ts
client/src/mock/api/expense/: expenses.ts
client/src/mock/api/models/: expense_model.ts  logout_model.ts  me_model.ts  register_model.ts
client/src/mock/api/user/: login.ts  logout.ts  me.ts  register.ts
client/src/mock/entities/: predefined_expense.json  recurrence_type.json  transaction.json
client/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte  __layout.svelte  dashboard.svelte  home.svelte  index.svelte  login.svelte  profile.svelte  register.svelte
client/src/routes/api/: currency.ts  dashboard.ts  login.ts  logout.ts  me.ts  recurrence.ts  register.ts
client/src/routes/api/currency/: +server.ts
client/src/routes/api/expense/: +server.ts  [userId].ts  index.ts
client/src/routes/api/me/: +server.ts
client/src/routes/getting-started/: +page.svelte
client/src/routes/login/: +page.svelte
client/src/routes/register/: +page.svelte
client/src/routes/start-tracking/: +page.svelte
client/src/services/: BackendApi.js
client/src/shared/: axios.ts  domain.ts
client/src/shared/api/: deleteTransaction.ts  getCurrencyTypes.ts  getExpenses.ts  getPredifinedExpenses.ts  getRecurrenceTypes.ts  login.ts  logout.ts  me.ts  newExpense.ts  newTransaction.ts  register.ts
client/src/style/: _variables.scss  app.scss
client/src/theme/: _smui-theme.scss
client/src/theme/dark/: _smui-theme.scss
client/static/: smui-dark.css  smui.css
client/veryrezsi/: package-lock.json  package.json  svelte.config.js
database/: Dockerfile
database/scripts/: init.sql
docs/src/: er_model.plantuml  expense_usecase.plantuml  expenses_usecase.plantuml  user_interaction_usecase.plantuml
server/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  init.sql  postman_collection.json
server/api/: Cargo.toml
server/api/src/: auth.rs  dtos.rs  lib.rs  routes.rs
server/api/src/dtos/: expenses.rs
server/api/src/routes/: common.rs  currencies.rs  currency_types.rs  error.rs  expenses.rs  mod.rs  recurrence_types.rs  recurrences.rs  transactions.rs  users.rs
server/core/: Cargo.toml
server/core/src/: config.rs  database.rs  email.rs  lib.rs
server/core/src/dto/: currencies.rs  currency_types.rs  expenses.rs  mod.rs  recurrence_types.rs  recurrences.rs  transactions.rs  users.rs
server/core/src/logic/: common.rs  currency_operations.rs  error.rs  expense_operations.rs  mod.rs  recurrence_operations.rs  transaction_operations.rs  user_operations.rs
server/docker/conf/: .env
server/docker/config/: .env  app-config.toml
server/docker/scripts/: run.sh
server/entity/: Cargo.toml
server/entity/src/: account_activation.rs  currency.rs  currency_type.rs  expense.rs  lib.rs  predefined_expense.rs  recurrence.rs  recurrence_type.rs  transaction.rs  user.rs
server/migration/: .env  Cargo.toml
server/migration/src/: lib.rs  m20220520_203901_create_users_table.rs  m20220707_222235_create_account_activation_table.rs  m20220811_190343_create_currency_table.rs  m20220811_190343_create_currency_type_table.rs  m20220811_190827_create_recurrence_table.rs  m20220811_190827_create_recurrence_type_table.rs  m20220811_190836_create_predefined_expenses_table.rs  m20220811_190845_create_expenses_table.rs  m20220811_190853_create_transactions_table.rs
server/migrations/2022-05-13-214855_create_users/: up.sql
server/proc_macros/: Cargo.toml  postman_collection.json
server/proc_macros/src/: lib.rs
server/resources/: app-config.toml
server/resources/email/: activation_email.html
server/src/: auth.rs  config.rs  database.rs  email.rs  lib.rs  main.rs  schema.rs
server/src/database/: mod.rs  users.rs
server/src/logic/: common.rs  currency_operations.rs  error.rs  expense_operations.rs  mod.rs  recurrence_operations.rs  transaction_operations.rs  user_operations.rs
server/src/models/: user.rs
server/src/routes/: common.rs  currency_types.rs  dto.rs  error.rs  expenses.rs  mod.rs  recurrence_types.rs  transactions.rs  user.rs  users.rs
server/src/routes/dto/: expenses.rs  mod.rs
(+22 files in other folders)
