[package]
name = "veryrezsi"
version = "0.3.0"

[workspace]
members = [
    "api",
    "core",
    "migration",
    "entity",
    "proc_macros"
]

[workspace.package]
authors = [
    "Attila Szőke <szokeattila9801@gmail.com>",
    # TODO dönisz was here
]
edition = "2021"
license = "MIT"
homepage = "https://github.com/szattila98/veryrezsi"
repository = "https://github.com/szattila98/veryrezsi"
documentation = "https://github.com/szattila98/veryrezsi"
description = "Expense and subscription calculator web-server."

[workspace.dependencies]
chrono = "0.4.23"
sea-orm = "0.10.6"
serde = "1.0.151" 
serde_json = "1.0.91"
tokio = "1.23.0" 
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
pwhash = "1.0.0"
validator = "0.16.0" 

[dependencies]
veryrezsi-api = { path = "./api" }

# [profile.release]
# strip = true
# lto = true
# codegen-units = 1
