[package]
name = "veryrezsi"
version = "0.4.0"

[workspace]
members = [
    "api",
    "core",
    "migration",
    "entity",
    "proc_macros"
]

[workspace.package]
authors = [
    "Attila Szőke <szokeattila9801@gmail.com>",
    # TODO dönisz was here
]
edition = "2021"
license = "MIT"
homepage = "https://github.com/szattila98/veryrezsi"
repository = "https://github.com/szattila98/veryrezsi"
documentation = "https://github.com/szattila98/veryrezsi"
description = "Expense and subscription calculator web-server."

[workspace.dependencies]
chrono = "0.4.26"
sea-orm = "0.11.3"
serde = "1.0.163" 
serde_json = "1.0.96"
tokio = "1.28.2" 
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
pwhash = "1.0.0"
validator = "0.16.0" 
assert2 = "0.3.11"

[dependencies]
veryrezsi-api = { path = "./api" }

# [profile.release]
# strip = true
# lto = true
# codegen-units = 1