[package]
name = "veryrezsi-api"
version = "0.3.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
# TODO Remove after we have dtos, and export the needed things in core
sea-orm = { workspace = true, features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
entity = { path = "../entity" }

veryrezsi-core = { path = "../core", default-features = false }
migration = { path = "../migration" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pwhash = { workspace = true }
validator = { workspace = true }

axum = "0.6.0"
axum-extra = { version = "0.4.0", features = ["cookie-private"] }
axum-macros = "0.3.0"
tower = "0.4.13"
