[package]
name = "veryrezsi-api"
version = "0.4.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
veryrezsi-core = { path = "../core", default-features = false }
migration = { path = "../migration" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }

axum = "0.6.18"
axum-extra = { version = "0.7.4", features = ["cookie-private"] }
axum-macros = "0.3.7"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
