[package]
name = "veryrezsi-core"
version = "0.3.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
proc_macros = { path = "../proc_macros" }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sea-orm = { workspace = true, features = [ "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pwhash = { workspace = true }
validator = { workspace = true, features = ["derive"] }

lazy_static = "1.4.0"
fancy-regex = "0.10.0"
thiserror = "1.0.37"
lettre = { version = "0.10.1", default-features = false, features = ["builder", "smtp-transport", "pool", "tokio1-rustls-tls"] }
handlebars = "4.3.5"
confique = { version = "0.2.0", default-features = false, features = ["toml"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]