[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "0.8.0" }
serde = {version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"