[package]
name = "entity"
version = "0.3.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
sea-orm = "0.10.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
