[package]
name = "entity"
version = "0.3.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
sea-orm = { workspace = true }

# TODO Remove when there are dtos
serde = { workspace = true }
serde_json = { workspace = true }
