[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "0.8.2", features = [ "sqlx-mysql", "runtime-tokio-rustls" ] }
async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
