[package]
name = "migration"
version = "0.3.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
entity = { path = "../entity" }

chrono = { workspace = true }

sea-orm-migration = { version = "0.11.3", features = [ "sqlx-mysql", "runtime-tokio-rustls" ] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
