[package]
name = "proc_macros"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.16", features = ["full"] }
quote = "1.0.27"
css-inline = "0.8.5"
minify-html-onepass = "0.11.1"
